tests/cases/errors/sema/arg_count_mismatch.hc
//@ error: expects 1 argument(s), got 2
U0 F(I64 a) {}

U0 Main()
{
  F(1, 2);
}
